recursion.cons.lessons.recursion.cons.PlusOne.scala.error
plusOne:2: error: type mismatch;
 found   : Int
 required: List[Int]
	if(l.tail == Nil){ return l.head+1
                                        ^